<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>shogun</groupId>
    <artifactId>shogun</artifactId>
    <version>1.0.11</version>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <java.version>11</java.version>
        <jpackager.executable>${project.basedir}/jdk.packager/jpackager</jpackager.executable>
        <jpackager.icon>${project.basedir}/package/Shogun.icns</jpackager.icon>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.7.26</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-core</artifactId>
            <version>1.2.13</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.2.3</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.5.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>17.0.0</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <build>

        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.1.0</version>
                <configuration>
                    <nonFilteredFileExtensions>
                        <nonFilteredFileExtension>xml</nonFilteredFileExtension>
                    </nonFilteredFileExtensions>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.1.1</version>
                <executions>
                    <execution>
                        <id>make-assembly</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                    <finalName>${project.artifactId}-${project.version}</finalName>
                    <appendAssemblyId>false</appendAssemblyId>
                    <archive>
                        <manifest>
                            <mainClass>shogun.Shogun</mainClass>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>1.6.0</version>
                <executions>
                    <execution>
                        <id>create-package</id>
                        <phase>package</phase>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>${jpackager.executable}</executable>
                            <workingDirectory>${project.build.directory}</workingDirectory>
                            <longModulepath>false</longModulepath>
                            <environmentVariables>
                                <JAVA_HOME>${java.home}</JAVA_HOME>
                            </environmentVariables>
                            <arguments>
                                <argument>create-installer</argument>
                                <argument>--verbose</argument>
                                <argument>--echo-mode</argument>
                                <argument>--jvm-args</argument>
                                <argument>-Xmx12m -Xms12m -XX:+UseSerialGC -Xverify:none
                                    -XX:ErrorFile=$USER_HOME/java_error_in_idea_%p.log
                                    -XX:HeapDumpPath=$USER_HOME/java_error_in_idea.hprof
                                </argument>
                                <argument>--copyright</argument>
                                <argument>Yusuke Yamamoto</argument>
                                <argument>--vendor</argument>
                                <argument>Yusuke Yamamoto</argument>
                                <argument>--icon</argument>
                                <argument>${jpackager.icon}</argument>
                                <argument>--input</argument>
                                <argument>${project.build.directory}/</argument>
                                <argument>--class</argument>
                                <argument>shogun.Shogun</argument>
                                <argument>--main-jar</argument>
                                <argument>./${project.artifactId}-${project.version}.jar</argument>
                                <argument>--output</argument>
                                <argument>./</argument>
                                <argument>--singleton</argument>
                                <argument>--identifier</argument>
                                <argument>com.samuraism.Shogun</argument>
                                <argument>--name</argument>
                                <argument>Shogun</argument>
                                <argument>--add-modules</argument>
                                <argument>java.base,java.desktop,java.naming</argument>
                                <argument>--strip-native-commands</argument>
                            </arguments>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <release>11</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>3.0.0-M2</version>
                <executions>
                    <execution>
                        <id>enforce-maven</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireMavenVersion>
                                    <version>3.0.5</version>
                                </requireMavenVersion>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.2</version>
            </plugin>
        </plugins>
    </build>
    <profiles>
        <profile>
            <id>windows</id>
            <activation>
                <os><family>windows</family></os>
            </activation>
            <properties>
                <jpackager.executable>${java.home}/bin/jpackager</jpackager.executable>
                <jpackager.icon>${project.basedir}/package/windows/Shogun.ico</jpackager.icon>
            </properties>
        </profile>
    </profiles>

</project>